--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,11 @@ spring.application.name=project
 spring.datasource.url=jdbc:postgresql://localhost:5432/project
 spring.datasource.password=root
 spring.datasource.username=postgres
+spring.jpa.hibernate.ddl-auto=update
 
 management.endpoints.web.exposure.include= info,env,shutdown,mappings,beans
 management.endpoint.shutdown.enabled=true
 management.endpoint.env.show-values=always
+
+jwt.secret=sdghsb34b-23324jasd-asjfasoif
+jwt.expiration=30
